# grelier

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: perf.env
.github/actions/install-system-deps/: action.yml
.github/workflows/: ci.yml  docs.yml  perf-gate.yml  perf-trend.yml
benches/: perf_gauges.rs  perf_main_loop.rs
src/: action_dialog.rs  app.rs  apps.rs  bar.rs  clock.rs  date.rs  dialog_settings.rs  gauge.rs  gauge_registry.rs  icon.rs  info_dialog.rs  lib.rs  main.rs  menu_dialog.rs  monitor.rs  runtime_dispatch.rs  settings.rs  settings_storage.rs  sway_workspace.rs  theme.rs
src/dialog/: action.rs  app_launcher.rs  common.rs  info.rs  menu.rs  mod.rs
src/gauges/: audio_in.rs  audio_out.rs  battery.rs  brightness.rs  clock.rs  cpu.rs  date.rs  disk.rs  net_common.rs  net_down.rs  net_download.rs  net_up.rs  net_upload.rs  quantity.rs  ram.rs  sound.rs  sway_workspace.rs  test_gauge.rs  wifi.rs
src/panels/: gauge_panel.rs  mod.rs  panel_registry.rs  top_apps_panel.rs  ws_panel.rs
src/panels/gauges/: audio_in.rs  audio_out.rs  battery.rs  brightness.rs  clock.rs  cpu.rs  date.rs  disk.rs  gauge.rs  gauge_registry.rs  gauge_work_manager.rs  mod.rs  net_common.rs  net_down.rs  net_up.rs  power.rs  ram.rs  session.rs  test_gauge.rs  wifi.rs
